4th commit - added functions

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         </p>
     </form>
 
-    <div id="fullList">
+    <div class="fullList">
+
         <ul id="itemList"></ul>
+        
     </div>
 
 
     <!--*visual aid* lefthand check box will strikthrough with .js -->
     <!--*visual aid* righthand check box will function as "delete" button in .js-->
-    <input type="checkbox" name="completed" value="item"></input> item 1 <input id="delete" type="checkbox" value="remove" checked="checked">
+    <input id="complete" type="checkbox" name="completed" value="item"></input> item 1 <input id="delete" type="checkbox" value="remove" checked="checked">
     
     <script src="script.js"></script>
 </body>
